basic Unit and Behave tests

--- a/chobie/templates/base.html
+++ b/chobie/templates/base.html
@@ -9,9 +9,9 @@
   <div>
       {{ user }}
       {% if user.is_anonymous %}
-      <a href="{% url 'django.contrib.auth.views.login' %}">login</a>
+      <a href="{% url 'login' %}">login</a>
       {% else %}
-      <a href="{% url 'django.contrib.auth.views.logout' %}">logout</a>
+      <a href="{% url 'logout' %}">logout</a>
       {% endif %}
     </div>
 
